5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3992/executions/1798_2573.log
== SUBMITION (2019-06-12 12:11:26) 
-- CODE:
from numpy import*
p = array(eval(input("média dos alunos dos alunos: ")))
a = array(eval(input("altura:")))
v=zeros(size(p),dtype=float)
h=0
for i in range(size(p)):
	IMC=round((p[i]/(a[i]**2)),2)
	v[i]=IMC
	h+=1
	
print(v)
-- EXECUTION TIME:
0.845326
-- TEST CASE 1:
---- input:
[64.58,77.85,45.96,55.55]
[1.62,1.84,1.55,1.66]
---- correct output:
[24.61  22.99  19.13  20.16]
O MAIOR IMC DA TURMA EH: 24.61
PESO NORMAL
---- user output:
[24.61 22.99 19.13 20.16]
-- TEST CASE 2:
---- input:
[34.67,45.78,55.89]
[1.98,1.88,1.79]
---- correct output:
[  8.84  12.95  17.44]
O MAIOR IMC DA TURMA EH: 17.44
ABAIXO DO PESO
---- user output:
[ 8.84 12.95 17.44]
-- TEST CASE 3:
---- input:
[102.89,99.87]
[1.65,1.77]
---- correct output:
[37.79  31.88]
O MAIOR IMC DA TURMA EH: 37.79
OBESIDADE SEVERA
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 12:12:19) 
-- CODE:
from numpy import*
p = array(eval(input("peso: ")))
a = array(eval(input("altura:")))

v=zeros(size(p),dtype=float)
h=0
for i in range(size(p)):
	IMC=round((p[i]/(a[i]**2)),2)
	v[i]=IMC
	h+=1
	
print(v)
-- EXECUTION TIME:
1.15919
-- TEST CASE 1:
---- input:
[64.58,77.85,45.96,55.55]
[1.62,1.84,1.55,1.66]
---- correct output:
[24.61  22.99  19.13  20.16]
O MAIOR IMC DA TURMA EH: 24.61
PESO NORMAL
---- user output:
[24.61 22.99 19.13 20.16]
-- TEST CASE 2:
---- input:
[34.67,45.78,55.89]
[1.98,1.88,1.79]
---- correct output:
[  8.84  12.95  17.44]
O MAIOR IMC DA TURMA EH: 17.44
ABAIXO DO PESO
---- user output:
[ 8.84 12.95 17.44]
-- TEST CASE 3:
---- input:
[102.89,99.87]
[1.65,1.77]
---- correct output:
[37.79  31.88]
O MAIOR IMC DA TURMA EH: 37.79
OBESIDADE SEVERA
---- user output:
[37.79 31.88]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 12:12:31) 
-- CODE:
from numpy import*
p = array(eval(input("peso: ")))
a = array(eval(input("altura:")))

v=zeros(size(p),dtype=float)
h=0
for i in range(size(p)):
	IMC=round((p[i]/(a[i]**2)),2)
	v[i]=IMC
	h+=1
	
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 12:15:14) 
-- CODE:
from numpy import*
p = array(eval(input("peso: ")))
a = array(eval(input("altura:")))

v=zeros(size(p),dtype=float)
h=0
for i in range(size(p)):
	IMC=round((p[i]/(a[i]**2)),2)
	v[i]=IMC
	h+=1
	
print(v)
-- EXECUTION TIME:
1.2033
-- TEST CASE 1:
---- input:
[64.58,77.85,45.96,55.55]
[1.62,1.84,1.55,1.66]
---- correct output:
[24.61  22.99  19.13  20.16]
O MAIOR IMC DA TURMA EH: 24.61
PESO NORMAL
---- user output:
[24.61 22.99 19.13 20.16]
-- TEST CASE 2:
---- input:
[34.67,45.78,55.89]
[1.98,1.88,1.79]
---- correct output:
[  8.84  12.95  17.44]
O MAIOR IMC DA TURMA EH: 17.44
ABAIXO DO PESO
---- user output:
[ 8.84 12.95 17.44]
-- TEST CASE 3:
---- input:
[102.89,99.87]
[1.65,1.77]
---- correct output:
[37.79  31.88]
O MAIOR IMC DA TURMA EH: 37.79
OBESIDADE SEVERA
---- user output:
[24.61 22.99 19.13 20.16]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 12:15:19) 
-- CODE:
from numpy import*
p = array(eval(input("peso: ")))
a = array(eval(input("altura:")))

v=zeros(size(p),dtype=float)
h=0
for i in range(size(p)):
	IMC=round((p[i]/(a[i]**2)),2)
	v[i]=IMC
	h+=1
	
print(v)
-- EXECUTION TIME:
2.07646
-- TEST CASE 1:
---- input:
[64.58,77.85,45.96,55.55]
[1.62,1.84,1.55,1.66]
---- correct output:
[24.61  22.99  19.13  20.16]
O MAIOR IMC DA TURMA EH: 24.61
PESO NORMAL
---- user output:
[24.61 22.99 19.13 20.16]
-- TEST CASE 2:
---- input:
[34.67,45.78,55.89]
[1.98,1.88,1.79]
---- correct output:
[  8.84  12.95  17.44]
O MAIOR IMC DA TURMA EH: 17.44
ABAIXO DO PESO
---- user output:
[ 8.84 12.95 17.44]
-- TEST CASE 3:
---- input:
[102.89,99.87]
[1.65,1.77]
---- correct output:
[37.79  31.88]
O MAIOR IMC DA TURMA EH: 37.79
OBESIDADE SEVERA
---- user output:
[24.61 22.99 19.13 20.16]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 12:15:20) 
-- CODE:
from numpy import*
p = array(eval(input("peso: ")))
a = array(eval(input("altura:")))

v=zeros(size(p),dtype=float)
h=0
for i in range(size(p)):
	IMC=round((p[i]/(a[i]**2)),2)
	v[i]=IMC
	h+=1
	
print(v)
-- EXECUTION TIME:
2.36179
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1798/2573/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 12:15:22) 
-- CODE:
from numpy import*
p = array(eval(input("peso: ")))
a = array(eval(input("altura:")))

v=zeros(size(p),dtype=float)
h=0
for i in range(size(p)):
	IMC=round((p[i]/(a[i]**2)),2)
	v[i]=IMC
	h+=1
	
print(v)
-- EXECUTION TIME:
2.89881
-- TEST CASE 1:
---- input:
[64.58,77.85,45.96,55.55]
[1.62,1.84,1.55,1.66]
---- correct output:
[24.61  22.99  19.13  20.16]
O MAIOR IMC DA TURMA EH: 24.61
PESO NORMAL
---- user output:
[37.79 31.88]
-- TEST CASE 2:
---- input:
[34.67,45.78,55.89]
[1.98,1.88,1.79]
---- correct output:
[  8.84  12.95  17.44]
O MAIOR IMC DA TURMA EH: 17.44
ABAIXO DO PESO
---- user output:

-- TEST CASE 3:
---- input:
[102.89,99.87]
[1.65,1.77]
---- correct output:
[37.79  31.88]
O MAIOR IMC DA TURMA EH: 37.79
OBESIDADE SEVERA
---- user output:
[37.79 31.88]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 13:12:11) 
-- CODE:
from numpy import*
p = array(eval(input("peso: ")))
a = array(eval(input("altura:")))

v=zeros(size(p),dtype=float)
h=0
for i in range(size(p)):
	IMC=round((p[i]/(a[i]**2)),2)
	v[i]=IMC
	h+=1
	
print(h)
-- EXECUTION TIME:
1.68057
-- TEST CASE 1:
---- input:
[64.58,77.85,45.96,55.55]
[1.62,1.84,1.55,1.66]
---- correct output:
[24.61  22.99  19.13  20.16]
O MAIOR IMC DA TURMA EH: 24.61
PESO NORMAL
---- user output:
4
-- TEST CASE 2:
---- input:
[34.67,45.78,55.89]
[1.98,1.88,1.79]
---- correct output:
[  8.84  12.95  17.44]
O MAIOR IMC DA TURMA EH: 17.44
ABAIXO DO PESO
---- user output:
peso: altura:3
-- TEST CASE 3:
---- input:
[102.89,99.87]
[1.65,1.77]
---- correct output:
[37.79  31.88]
O MAIOR IMC DA TURMA EH: 37.79
OBESIDADE SEVERA
---- user output:
peso: altura:2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 13:12:12) 
-- CODE:
from numpy import*
p = array(eval(input("peso: ")))
a = array(eval(input("altura:")))

v=zeros(size(p),dtype=float)
h=0
for i in range(size(p)):
	IMC=round((p[i]/(a[i]**2)),2)
	v[i]=IMC
	h+=1
	
print(h)
-- EXECUTION TIME:
2.68985
-- TEST CASE 1:
---- input:
[64.58,77.85,45.96,55.55]
[1.62,1.84,1.55,1.66]
---- correct output:
[24.61  22.99  19.13  20.16]
O MAIOR IMC DA TURMA EH: 24.61
PESO NORMAL
---- user output:
peso: altura:4
-- TEST CASE 2:
---- input:
[34.67,45.78,55.89]
[1.98,1.88,1.79]
---- correct output:
[  8.84  12.95  17.44]
O MAIOR IMC DA TURMA EH: 17.44
ABAIXO DO PESO
---- user output:
peso: altura:3
-- TEST CASE 3:
---- input:
[102.89,99.87]
[1.65,1.77]
---- correct output:
[37.79  31.88]
O MAIOR IMC DA TURMA EH: 37.79
OBESIDADE SEVERA
---- user output:
peso: altura:2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 13:22:51) 
-- CODE:
from numpy import*
p = array(eval(input("peso: ")))
a = array(eval(input("altura:")))

v=zeros(size(p),dtype=float)
for i in range(size(p)):
	IMC=round((p[i]/(a[i]**2)),2)
	v[i]=IMC

prin(v)
print("O MAIOR IMC DA TURMA EH:", max(v))
if(max(v)<17):
	print("muito abaixo do peso".upper())
elif(max(v)>17 and max(v)<18.49):
	print("abaixo do peso".upper())
elif(max(v)>18 and max(v)<24.99):	
	print("peso normal".upper())
elif(max(v)>25 and max(v)<29.99):	
	print("acima do peso".upper())
elif(max(v)>30 and max(v)<34.99):
	print("obesidade ".upper())
elif(max(v)>30 and max(v)<39.99):
	print("obesidade severa ".upper())
elif(max(v)>40):
	print("obesidade morbida".upper())
-- EXECUTION TIME:
1.66182
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1798/2573/main.py", line 10, in <module>
    prin(v)
NameError: name 'prin' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 13:22:51) 
-- CODE:
from numpy import*
p = array(eval(input("peso: ")))
a = array(eval(input("altura:")))

v=zeros(size(p),dtype=float)
for i in range(size(p)):
	IMC=round((p[i]/(a[i]**2)),2)
	v[i]=IMC

prin(v)
print("O MAIOR IMC DA TURMA EH:", max(v))
if(max(v)<17):
	print("muito abaixo do peso".upper())
elif(max(v)>17 and max(v)<18.49):
	print("abaixo do peso".upper())
elif(max(v)>18 and max(v)<24.99):	
	print("peso normal".upper())
elif(max(v)>25 and max(v)<29.99):	
	print("acima do peso".upper())
elif(max(v)>30 and max(v)<34.99):
	print("obesidade ".upper())
elif(max(v)>30 and max(v)<39.99):
	print("obesidade severa ".upper())
elif(max(v)>40):
	print("obesidade morbida".upper())
-- EXECUTION TIME:
2.54959
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1798/2573/main.py", line 10, in <module>
    prin(v)
NameError: name 'prin' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 13:23:48) 
-- CODE:
from numpy import*
p = array(eval(input("peso: ")))
a = array(eval(input("altura:")))

v=zeros(size(p),dtype=float)
for i in range(size(p)):
	IMC=round((p[i]/(a[i]**2)),2)
	v[i]=IMC

prin(v)
print("O MAIOR IMC DA TURMA EH:", max(v))
if(max(v)<17):
	print("muito abaixo do peso".upper())
elif(max(v)>17 and max(v)<18.49):
	print("abaixo do peso".upper())
elif(max(v)>18.5 and max(v)<24.99):	
	print("peso normal".upper())
elif(max(v)>25 and max(v)<29.99):	
	print("acima do peso".upper())
elif(max(v)>30 and max(v)<34.99):
	print("obesidade ".upper())
elif(max(v)>30 and max(v)<39.99):
	print("obesidade severa ".upper())
elif(max(v)>40):
	print("obesidade morbida".upper())
-- EXECUTION TIME:
1.22948
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1798/2573/main.py", line 10, in <module>
    prin(v)
NameError: name 'prin' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 13:24:50) 
-- CODE:
from numpy import*
p = array(eval(input("peso: ")))
a = array(eval(input("altura:")))

v=zeros(size(p),dtype=float)
for i in range(size(p)):
	IMC=round((p[i]/(a[i]**2)),2)
	v[i]=IMC

prin(v)
print("O MAIOR IMC DA TURMA EH:", max(v))
if(max(v)<17):
	print("muito abaixo do peso".upper())
elif(max(v)>17 and max(v)<18.49):
	print("abaixo do peso".upper())
elif(max(v)>18.5 and max(v)<24.99):	
	print("peso normal".upper())
elif(max(v)>25 and max(v)<29.99):	
	print("acima do peso".upper())
elif(max(v)>30 and max(v)<34.99):
	print("obesidade ".upper())
elif(max(v)>30 and max(v)<39.99):
	print("obesidade severa ".upper())
elif(max(v)>40):
	print("obesidade morbida".upper())
-- EXECUTION TIME:
1.08535
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1798/2573/main.py", line 10, in <module>
    prin(v)
NameError: name 'prin' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 13:25:44) 
-- CODE:
from numpy import*
p = array(eval(input("peso: ")))
a = array(eval(input("altura:")))

v=zeros(size(p),dtype=float)
for i in range(size(p)):
	IMC=round((p[i]/(a[i]**2)),2)
	v[i]=IMC

prin(v)
print("O MAIOR IMC DA TURMA EH:", max(v))
if(max(v)<17):
	print("muito abaixo do peso".upper())
elif(max(v)>17 and max(v)<18.49):
	print("abaixo do peso".upper())
elif(max(v)>18.5 and max(v)<24.99):	
	print("peso normal".upper())
elif(max(v)>25 and max(v)<29.99):	
	print("acima do peso".upper())
elif(max(v)>30 and max(v)<34.99):
	print("obesidade ".upper())
elif(max(v)>30 and max(v)<39.99):
	print("obesidade severa ".upper())
elif(max(v)>40):
	print("obesidade morbida".upper())
	
	
-- EXECUTION TIME:
0.780357
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1798/2573/main.py", line 10, in <module>
    prin(v)
NameError: name 'prin' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 13:27:16) 
-- CODE:
from numpy import*
p = array(eval(input("peso: ")))
a = array(eval(input("altura:")))

v=zeros(size(p),dtype=float)
h=0
for i in range(size(p)):
	IMC=round((p[i]/(a[i]**2)),2)
	v[i]=IMC
	h+=1
prin(v)
print("O MAIOR IMC DA TURMA EH:", max(v))
if(max(v)<17):
	print("muito abaixo do peso".upper())
elif(max(v)>17 and max(v)<18.49):
	print("abaixo do peso".upper())
elif(max(v)>18.5 and max(v)<24.99):	
	print("peso normal".upper())
elif(max(v)>25 and max(v)<29.99):	
	print("acima do peso".upper())
elif(max(v)>30 and max(v)<34.99):
	print("obesidade ".upper())
elif(max(v)>30 and max(v)<39.99):
	print("obesidade severa ".upper())
elif(max(v)>40):
	print("obesidade morbida".upper())
	
	
-- EXECUTION TIME:
0.907531
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1798/2573/main.py", line 11, in <module>
    prin(v)
NameError: name 'prin' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 13:27:58) 
-- CODE:
from numpy import*
p = array(eval(input("peso: ")))
a = array(eval(input("altura:")))

v=zeros(size(p),dtype=float)
h=0
for i in range(size(p)):
	IMC=round((p[i]/(a[i]**2)),2)
	v[i]=IMC
	h+=1
prin(v)
print("O MAIOR IMC DA TURMA EH:", max(v))
if(max(v)<17):
	print("muito abaixo do peso".upper())
elif(max(v)>17 and max(v)<18.49):
	print("abaixo do peso".upper())
elif(max(v)>18.5 and max(v)<24.99):	
	print("peso normal".upper())
elif(max(v)>25 and max(v)<29.99):	
	print("acima do peso".upper())
elif(max(v)>30 and max(v)<34.99):
	print("obesidade ".upper())
elif(max(v)>35 and max(v)<39.99):
	print("obesidade severa ".upper())
elif(max(v)>40):
	print("obesidade morbida".upper())
	
	
-- EXECUTION TIME:
1.04338
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1798/2573/main.py", line 11, in <module>
    prin(v)
NameError: name 'prin' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 13:28:27) 
-- CODE:
from numpy import*
p = array(eval(input("peso: ")))
a = array(eval(input("altura:")))

v=zeros(size(p),dtype=float)
h=0
for i in range(size(p)):
	IMC=round((p[i]/(a[i]**2)),2)
	v[i]=IMC
	h+=1
prin(v)
print("O MAIOR IMC DA TURMA EH:", max(v))
if(max(v)<17):
	print("muito abaixo do peso".upper())
elif(max(v)>17 and max(v)<18.49):
	print("abaixo do peso".upper())
elif(max(v)>18.5 and max(v)<24.99):	
	print("peso normal".upper())
elif(max(v)>25 and max(v)<29.99):	
	print("acima do peso".upper())
elif(max(v)>30 and max(v)<34.99):
	print("obesidade".upper())
elif(max(v)>35 and max(v)<39.99):
	print("obesidade severa".upper())
elif(max(v)>40):
	print("obesidade morbida".upper())
	
	
-- EXECUTION TIME:
1.20524
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1798/2573/main.py", line 11, in <module>
    prin(v)
NameError: name 'prin' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 13:28:58) 
-- CODE:
from numpy import*
p = array(eval(input("peso: ")))
a = array(eval(input("altura:")))

v=zeros(size(p),dtype=float)
h=0
for i in range(size(p)):
	IMC=round((p[i]/(a[i]**2)),2)
	v[i]=IMC
	h+=1
prin(v)
print("O MAIOR IMC DA TURMA EH:", max(v))
if(max(v)<17):
	print("muito abaixo do peso".upper())
elif(max(v)>17 and max(v)<18.49):
	print("abaixo do peso".upper())
elif(max(v)>18.5 and max(v)<24.99):	
	print("peso normal".upper())
elif(max(v)>25 and max(v)<29.99):	
	print("acima do peso".upper())
elif(max(v)>30 and max(v)<34.99):
	print("obesidade".upper())
elif(max(v)>35 and max(v)<39.99):
	print("obesidade severa".upper())
elif(max(v)>40):
	print("obesidade morbida".upper())
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 13:29:27) 
-- CODE:
from numpy import*
p = array(eval(input("peso: ")))
a = array(eval(input("altura:")))

v=zeros(size(p),dtype=float)
h=0
for i in range(size(p)):
	IMC=round((p[i]/(a[i]**2)),2)
	v[i]=IMC
	h+=1
print(v)
print("O MAIOR IMC DA TURMA EH:", max(v))
if(max(v)<17):
	print("muito abaixo do peso".upper())
elif(max(v)>17 and max(v)<18.49):
	print("abaixo do peso".upper())
elif(max(v)>18.5 and max(v)<24.99):	
	print("peso normal".upper())
elif(max(v)>25 and max(v)<29.99):	
	print("acima do peso".upper())
elif(max(v)>30 and max(v)<34.99):
	print("obesidade".upper())
elif(max(v)>35 and max(v)<39.99):
	print("obesidade severa".upper())
elif(max(v)>40):
	print("obesidade morbida".upper())
	
	
-- EXECUTION TIME:
1.02899
-- TEST CASE 1:
---- input:
[64.58,77.85,45.96,55.55]
[1.62,1.84,1.55,1.66]
---- correct output:
[24.61  22.99  19.13  20.16]
O MAIOR IMC DA TURMA EH: 24.61
PESO NORMAL
---- user output:
[24.61 22.99 19.13 20.16]
O MAIOR IMC DA TURMA EH: 24.61
PESO NORMAL
-- TEST CASE 2:
---- input:
[34.67,45.78,55.89]
[1.98,1.88,1.79]
---- correct output:
[  8.84  12.95  17.44]
O MAIOR IMC DA TURMA EH: 17.44
ABAIXO DO PESO
---- user output:
[ 8.84 12.95 17.44]
O MAIOR IMC DA TURMA EH: 17.44
ABAIXO DO PESO
-- TEST CASE 3:
---- input:
[102.89,99.87]
[1.65,1.77]
---- correct output:
[37.79  31.88]
O MAIOR IMC DA TURMA EH: 37.79
OBESIDADE SEVERA
---- user output:
[37.79 31.88]
O MAIOR IMC DA TURMA EH: 37.79
OBESIDADE SEVERA
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
